--- a/test.ipynb
+++ b/test.ipynb
@@ -20,10 +20,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "30\n",
+      "22\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = [20,30,22,11]\n",
+    "for i in list:\n",
+    "    print (i)"
+   ]
   },
   {
    "cell_type": "code",
