2nd commit team32

--- a/test.ipynb
+++ b/test.ipynb
@@ -42,6 +42,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9.5, 4, 8, 10, 9.5, 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Imputer():\n",
+    "    def __init__(self, numbers_list):\n",
+    "        self.numbers_list = numbers_list\n",
+    "\n",
+    "    def avg(self):\n",
+    "        values = [x for x in self.numbers_list if x is not None]\n",
+    "\n",
+    "        if len(values)>0:\n",
+    "            average = sum(values)/len(values)\n",
+    "        else:\n",
+    "            average= 0\n",
+    "        self.numbers_list = [average if x is None else x for x in self.numbers_list]\n",
+    "\n",
+    "    def get_values(self):\n",
+    "        return self.numbers_list\n",
+    "\n",
+    "liste = [None, 4, 8, 10, None, 16]\n",
+    "\n",
+    "imputer = Imputer(liste)\n",
+    "\n",
+    "imputer.avg()\n",
+    "\n",
+    "print(imputer.get_values())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
