--- a/classes.ipynb
+++ b/classes.ipynb
@@ -59,6 +59,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n",
+      "44\n",
+      "66\n"
+     ]
+    }
+   ],
+   "source": [
+    "liste = [22,44, 66]\n",
+    "for i in liste:\n",
+    "    print(i)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
